Downgrading to JAva 8